2004-05-06  Per Bothner  <per@bothner.com>

	* kawa/standard/cxr.java (count):  Replace field by high-order
	16 bits, so that setting mask+count is atomic.

	* kawa/standard/cxr.java (program):  Fix race condition.
	Partly fixes bug #8817.

2004-04-22  Per Bothner  <per@bothner.com>

	* build.xml  (build.selectjava):  Add gnu/lists/FString.java

2004-04-17  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Fix typo.
	Fixes bug #7666.

	* configure.in: Fix help text typo reported by Pete Chown.
	Fixes bug #7851.

2004-03-08  Per Bothner  <per@bothner.com>

	* kawa/standard/define_syntax.java (rewriteForm): Do setProcedureDecl
	and setFuncDef, for the sake of 'defmacro' used in Common Lisp.

	* kawa/standard/define_class.java (rewrite):  Move setSimple call ...
	(scanForDefinitions):  ... to here.
	
	* kawa/standard/load.java (loadSource):  Don't call beginDocument
	or endDocument.

	* build.xml (build.selectjava):  Add gnu/mapping/Symbol.java
	and gnu/text/Char.java.

2004-03-03  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (bind):  Remove method.
	(make):  Call Declaration's setSyntax instead of bind.
	(<init>(Object,Expression)):  Remove constructor.
	* kawa/standard/define_syntax.java (scanForDefinitions):  Defer
	allocation of new Macro until rewrite time.
	(rewrite):  Simpler and cleaner logic.  We don't note the value of
	Declaration as being a constant Macro when it isn't.
	* kawa/standard/let_syntax.java (rewrite):  Add call to noteValue,
	since Macro constructor no longer does it.
	* kawa/standard/require.java (importDefinitions):  Call noteValue and
	setSynax for Macro declaration in place of Macro's removed bind.

2004-02-21  Per Bothner  <per@bothner.com>

	* build.xml (build.selectjava):  Add gnu/math/RealNum.java.

2004-02-15  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewrite):  Refactor so rewrite can be called
	at scan time, while rewriteBody can be called at rewrite time.